<?xml version="1.0" encoding="utf-8"?>

<layout>

        <data>

            <variable
                name="viewModel"
                type="com.weatheruous.ui.MainWeatherViewModel" />
        </data>
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainWeatherFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/location_icon"
                android:layout_width="@dimen/default_icon_size"
                android:layout_height="@dimen/default_icon_size"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/location_icon_description"
                android:src="@drawable/ic_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="Location, OR"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/location_text_size"
                app:layout_constraintBottom_toBottomOf="@+id/location_icon"
                app:layout_constraintEnd_toStartOf="@+id/search_icon"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/location_icon"
                app:layout_constraintTop_toTopOf="@+id/location_icon"
                tools:text="Location, OR" />

            <ImageView
                android:id="@+id/settings_icon"
                android:layout_width="@dimen/default_icon_size"
                android:layout_height="30dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:contentDescription="@string/settings_icon_description"
                android:src="@drawable/ic_settings"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/search_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/search_icon_description"
                android:src="@drawable/ic_search_globe"
                app:layout_constraintEnd_toStartOf="@+id/settings_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/date_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="Friday, March 12th "
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/date_title_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/location_icon"
                tools:text="Friday, Match 12th" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/current_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/text_temperature"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/default_temperature_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_title"
                tools:text="36\u00B0" />

            <ImageView
                android:id="@+id/current_weather_icon"
                android:layout_width="@dimen/weather_icon_size"
                android:layout_height="@dimen/weather_icon_size"
                android:layout_marginTop="32dp"
                android:src="@drawable/ic_wi_cloudy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/current_temperature" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/weather_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="Cloudy"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/current_weather_description_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/current_weather_icon"
                tools:text="Cloudy" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>
